# kite

./: .gitignore  Doxyfile  meson.build
.github/workflows/: build.yml
examples/: main.kite
lib/: kite.cpp  kite.hpp  version.hpp.in
lib/cli/: cli.cpp  cli.hpp
lib/common/: cursor.hpp  display.hpp  error.cpp  error.hpp  source.hpp  span.hpp
lib/debug/: debug.cpp  debug.hpp
lib/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
